--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/microservices": "^11.1.8",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.1",
     "kafkajs": "^2.2.4",
     "nestjs-pino": "^4.4.1",
     "pino": "^9.14.0",
     "pino-pretty": "^13.1.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
